despatma-abstract-factory/tests/fail/invalid_dyn.stderr
error[E0404]: expected trait, found struct `Window`
  --> tests/fail/invalid_dyn.rs:13:33
   |
13 | #[abstract_factory(Factory, dyn Window)]
   |                                 ^^^^^^ not a trait

error[E0404]: expected trait, found struct `Window`
  --> tests/fail/invalid_dyn.rs:21:22
   |
21 | #[interpolate_traits(Window => Window)]
   |                      ^^^^^^ not a trait
